# gpsd

./: .gitignore  .gitlab-ci.yml  .splintrc  .travis.build  .travis.yml  .vimrc  AUTHORS  Android.bp  CHANGELOG  COPYING  DEVTOOLS  HACKING  INSTALL  INSTALL.adoc  Makefile  Makefile.am  Makefile.in  Makefile.mingw  NEWS  Qgpsmm.pc.in  README  README.EarthMate  README.adoc  README.cskprog  README.protocol  SConstruct  SConstruct.orig  SUPPORT.adoc  TODO  Tachometer.c  Tachometer.h  TachometerP.h  XGpsSpeed  acconfig.h  aclocal.m4  ais.py  ais_json.c  alarm.c  autogen.sh  bits.c  (+399 more)
.ci-build/: build.sh  test_options.sh
.travis/: build.sh
android/: README  gps_maskdump.c  gps_test.c  gpsd.rc  gpsd_config.h  gpsd_config.in  gpsd_wrapper.c  manifest.xml  packet_names.h  revision.h  timebase.h
android/hal/: Android.bp  Gnss.cpp  Gnss.h  GnssConfiguration.cpp  GnssConfiguration.h  GnssMeasurement.cpp  GnssMeasurement.h  android.hardware.gnss@1.1-service.gpsd.rc  service.cpp
android/sepolicy/: file_contexts  gpsd.te  hal_gnss.te
contrib/: .gitignore  Makefile  Makefile.am  README  SConstruct  ashctl.c  binlog.c  binreplay.c  clock_test.c  etc_default_gpsd  etc_init.d_gpsd  etc_init.d_gpsd_rpm  garreset.c  gpsData.py  gpsdlcdd.c  gpsdspewcurses.c  gpspipe.c  gpsread.c  gpssnmp.c  gpxlogger.c  gpxlogger.pl  lla2ecef.c  maxsats.pl  motosend.c  nmeasend.c  ntpoffset  ntpshmviz  ntpshmviz.in  ppscheck.c  sirf.box  sirfctl.c  skyview.php  skyview2svg  skyview2svg.py.in  ubxsend.c  ubxtool  ubxtool.xml  webgps.in  webgps.py  zerk  (+1 more)
contrib/appamor/: README.md  usr.sbin.gpsd
devtools/: COMMITTERS  Do-GeoidEval.py  README  ais.py  aivdmtable  client-projects  cov-scan  cycle_analyzer  dchroot-exec  do-build  easyinverse.pl  editcomment  fakecompare  findbreakage  flock-instructions  flock-sites.ini  flockdriver  flocktest  flocktest.ini  get_mag_var_table.py  gpsd-debian-regressions.sh  gpsdfake  identify_failing_build_options.py  leapsecond.py  maskaudit  ppstest.c  regress-builder  regressdiff  sizes  striplog  tablecheck.py  tablegen.py  test_json_validity.py  uninstall_cleanup.py
doc/: Makefile  explan_bits.h.xml  explan_dgnss.c.xml  explan_dgpsip.c.xml  explan_driver_nmea.c.xml  explan_driver_proto.c.xml  explan_drivers.c.xml  explan_geoid.c.xml  explan_gps.h.xml  explan_gpsd.c.xml  explan_gpsd.h.xml  explan_gpsd_dbus.c.xml  explan_gpsd_log.c.xml  explan_gpsdclient.c.xml  explan_gpsutils.c.xml  explan_isgps.c.xml  explan_libgps.c.xml  explan_libgps_core.c.xml  explan_libgpsd_core.c.xml  explan_libgpsmm.cpp.xml  explan_libgpsmm.h.xml  explan_netlib.c.xml  explan_nmea_parse.c.xml  explan_ntpshm.c.xml  explan_ntrip.c.xml  explan_packet.c.xml  explan_packet_names.h.xml  explan_packet_states.h.xml  explan_pseudonmea.c.xml  explan_report.c.xml  explan_rtcm.c.xml  explan_serial.c.xml  explan_subframe.c.xml  explan_timebase.h.xml  explan_wrapup.xml  explanation.xml  internals.xml
gps/: __init__.py  __init__.py.in  aiogps.py  client.py  clienthelpers.py  fake.py  gps.py  gps.py.in  misc.py  watch_options.py
libQgpsmm/: gpsutils.cpp  libQgpsmm.pro  libgps_core.cpp
libQgpsmm/mingw/: gpsd_config.h  test_qgpsmm.pro
man/: gps.xml  gps2udp.xml  gpscat.xml  gpsctl.xml  gpsd.xml  gpsd_json.xml  gpsdctl.xml  gpsfake.xml  gpsinit.xml  gpsmon.xml  gpspipe.xml  gpsprof.xml  gpsrinex.xml  libgps.xml  ntpshmmon.xml  ppscheck.xml  ubxtool.xml  zerk.xml
packaging/: README.PACKAGERS  etc_default_gpsd  etc_init.d_gpsd  etc_init.d_gpsd_rpm  gpsd.ebuild  gpsd.spec.in  readme.txt
packaging/X11/: xgps.desktop  xgpsspeed.desktop
packaging/rpm/: gpsd.init  gpsd.spec.in
repo/: README  config  upload
repo/hooks/: acl.sh  ciabot.py  ciabot.sh  update
systemd/: gpsd.service  gpsd.socket  gpsdctl@.service
test/: README  bu303-climbing.log.chk  bu303-climbing.log.qtst  bu303-moving.log.chk  bu303-moving.log.qtst  bu303-nofix.log.chk  bu303-nofix.log.qtst  bu303-stillfix.log.chk  bu303-stillfix.log.qtst  bu303b-nofix.log.chk  bu303b-nofix.log.qtst  eXplorist210.log.chk  eXplorist210.log.qtst  garmin-geko201.log.chk  garmin-geko201.log.qtst  garmin17n.log.chk  garmin17n.log.qtst  garmin25lp.log.chk  garmin25lp.log.qtst  garmin38.log.chk  garmin38.log.qtst  garmin48.log.chk  garmin48.log.qtst  geoid.test.chk  gps-360.log.chk  gps-360.log.qtst  gpslim236.log.chk  gpslim236.log.qtst  haicom-305N.log.chk  holux-gm-210.log.chk  holux-gm-210.log.qtst  holux.log.chk  humminbird-M37.log.chk  humminbird-M37.log.qtst  iTrek.log.chk  iTrek.log.qtst  magellan-ec10.log.chk  magellan-ec10.log.qtst  magellan315.log.chk  magellan315.log.qtst  (+40 more)
test/clientlib/: multipacket.log.chk  oldstyle.log.chk
test/daemon/: GPSmap-76S.log.chk  ac12.log.chk  ac12_binary.log.chk  ais-nmea-type6-fid55.log.chk  ais_unpack_sixbit.log.chk  ait250.log.chk  april6_2019.log.chk  beidou-bd.log.chk  beidou-gb.log.chk  blumax-gps009.log.chk  bn-9015.log.chk  bt-q818.log.chk  bt451.log.chk  bu303-climbing.log.chk  bu303-moving.log.chk  bu303-nofix.log.chk  bu303-stillfix.log.chk  bu303b-nofix.log.chk  bu353-glonass.log.chk  bu353s4.log.chk  bundg_zeus_9.log.chk  ch-4701.log.chk  ch-4711.log.chk  com-1289.log.chk  eXplorist110.log.chk  eXplorist210.log.chk  (+118 more)
tests/: gps  test_bits.c  test_float.c  test_geoid.c  test_gpsdclient.c  test_gpsmm.cpp  test_json.c  test_json_wignore.c  test_libgps.c  test_matrix.c  test_mktime.c  test_nmea2000  test_packet.c  test_timespec.c  test_trig.c  test_xgps_deps.py
www/: 70-persistent-usb-gps.rules  AIVDM.adoc  AIVDM.txt  CHANGELOG  Makefile  NMEA.adoc  NMEA.txt  README  bt.html  bu_303b.html  calibrate-gpsd-ntpd-howto.txt  cansetup  client-howto.adoc  client-howto.txt  compatibility.html  cycle.dia  datestamp.js  excellence.html  faq.html  faq.html.in  for-vendors.html  future.html  gps-hacking.html  gps_report.cgi  gps_report.cgi.in  gpsd-time-service-howto.adoc  gpsd-time-service-howto.txt  gpsdctl.html  gypsy.html  hacking.html  hacking.html.in  hall-of-shame.html  hardware-head.html  hardware-head.html.in  hardware-tail.html  hardware.html  history.html  index.html  index.html.in  main.css  (+18 more)
(+73 files in other folders)
